--- a/docs/3.0/develop/task-caching.mdx
+++ b/docs/3.0/develop/task-caching.mdx
@@ -212,7 +212,7 @@ def my_cached_task(x: int):
 
 This task will store cache records in the specified directory.
 
-To store cache records in a remote object store like S3, pass a storage block instead:
+To store cache records in a remote object store such as S3, pass a storage block instead:
 
 ```python
 from prefect import task
