--- a/docs/3.0/automate/events/webhook-triggers.mdx
+++ b/docs/3.0/automate/events/webhook-triggers.mdx
@@ -97,6 +97,38 @@ a `204 No Content` response when they are successful or a `400 Bad Request` erro
 there is any error interpreting the request. For more visibility when your webhooks
 fail, see the [Troubleshooting](#troubleshooting) section below.
 
+
+## Webhook Authentication
+
+To enhance security, within a Prefect Cloud Pro or Enterprise tier account, you
+can assign a Service Account to a Webhook. This feature provides an additional
+layer of security and is highly recommended, especially for enterprise
+environments. 
+
+### API Key Authentication
+
+Webhooks can be associated with a Service Account, and the webhook endpoint
+will be authenticated using the Service Account's API Key. 
+
+To use API Key authentication:
+
+1. Create a Service Account or use an existing one.
+2. Associate the Service Account with your webhook from the UI.
+3. Include the API Key in the `Authorization` header of your webhook requests:
+
+```
+Authorization: Bearer <your-api-key>
+```
+
+### Account-Level Security Enforcement
+
+An account-level setting is available to enforce authentication on all webhooks. When enabled:
+
+- All existing webhooks without an associated Service Account will be automatically disabled.
+- New webhooks must be created with an associated Service Account.
+- Existing webhooks must be updated to include a Service Account before they can be re-enabled.
+
+
 ## Webhook templates
 
 The purpose of a webhook is to accept an HTTP request from another system and produce a
