--- a/docs/3.0/automate/events/webhook-triggers.mdx
+++ b/docs/3.0/automate/events/webhook-triggers.mdx
@@ -98,35 +98,35 @@ there is any error interpreting the request. For more visibility when your webho
 fail, see the [Troubleshooting](#troubleshooting) section below.
 
 
-## Webhook Authentication
+## Webhook authentication
 
 To enhance security, within a Prefect Cloud Pro or Enterprise tier account, you
-can assign a Service Account to a Webhook. This feature provides an additional
+can assign a service account to a webhook. This feature provides an additional
 layer of security and is highly recommended, especially for enterprise
 environments. 
 
-### API Key Authentication
+### API key authentication
 
 Webhooks can be associated with a Service Account, and the webhook endpoint
-will be authenticated using the Service Account's API Key. 
+will be authenticated using the service account's API key. 
 
-To use API Key authentication:
+To use API key authentication:
 
-1. Create a Service Account or use an existing one.
-2. Associate the Service Account with your webhook from the UI.
-3. Include the API Key in the `Authorization` header of your webhook requests:
+1. Create a service account or use an existing one.
+2. Associate the service account with your webhook from the UI.
+3. Include the API key in the `Authorization` header of your webhook requests:
 
 ```
 Authorization: Bearer <your-api-key>
 ```
 
-### Account-Level Security Enforcement
+### Account-level security enforcement
 
 An account-level setting is available to enforce authentication on all webhooks. When enabled:
 
-- All existing webhooks without an associated Service Account will be automatically disabled.
-- New webhooks must be created with an associated Service Account.
-- Existing webhooks must be updated to include a Service Account before they can be re-enabled.
+- All existing webhooks without an associated service account will be automatically disabled.
+- New webhooks must be created with an associated service account.
+- Existing webhooks must be updated to include a service account before they can be re-enabled.
 
 
 ## Webhook templates
