--- a/docs/3.0/automate/events/webhook-triggers.mdx
+++ b/docs/3.0/automate/events/webhook-triggers.mdx
@@ -107,7 +107,7 @@ environments.
 
 ### API key authentication
 
-Webhooks can be associated with a Service Account, and the webhook endpoint
+Webhooks can be associated with a service account, and the webhook endpoint
 will be authenticated using the service account's API key. 
 
 To use API key authentication:
