--- a/docs/3.0/deploy/index.mdx
+++ b/docs/3.0/deploy/index.mdx
@@ -24,9 +24,174 @@ pause scheduled runs, customize parameters, and more
 - remotely configure schedules and automation rules for your deployments
 - dynamically provision infrastructure using [workers](/3.0/deploy/infrastructure-examples/docker)
 
-## Deployment schema
+## Create a deployment 
 
-Here's the complete schema that defines a deployment:
+### Create a deployment with a local `serve` method
+
+A deployment can be defined in Python with the `.serve` method. 
+This is a great way to get started and to learn about deployments.
+
+```python
+from prefect import flow
+
+
+@flow
+def my_flow():
+    print("Hello, Prefect!")
+
+
+if __name__ == "__main__":
+    my_flow.serve(name="my-first-deployment")
+```
+
+This methods creates a deployment object that can be used to trigger flow runs.
+It starts a server and registers the flow with the Prefect API.
+The server process runs in a single process and waits for flow runs to be triggered.
+
+If you want to run your flow on remote infrastructure, need more control over the execution environment, or want to create a template for other deployments to use, use a deployment with a work pool.
+
+### Create a work pool-based Deployment
+
+### Create a deployment with a Python `flow.deploy` method
+
+Prefect offers two primary methods for creating deployments that use a work pool.
+To define a deployment through Python code, use the `flow.deploy` method.
+
+Here's an example of a deployment that uses a work pool and bakes the code into a Docker image.
+
+```python
+from prefect import flow
+
+
+@flow
+def my_flow():
+    print("Hello, Prefect!")
+
+
+my_flow.deploy(
+    name="my-second-deployment",
+    work_pool_name="my-work-pool",
+    image="my-image",
+    push=False,
+)
+```
+
+### Create a deployment with a YAML file
+If you'd rather take a declarative approach to defining a deployment through a YAML file, use a [prefect.yaml file](/3.0/deploy/infrastructure-concepts/prefect-yaml).
+
+Prefect provides an interactive CLI that walks you through creating a `prefect.yaml` file.
+
+```bash
+prefect deploy
+```
+
+Prefect also provides [CI/CD options](/3.0/deploy/infrastructure-concepts/deploy-ci-cd) for automatically creating deployments. 
+
+### Work pools
+[Work pools](/3.0/deploy/infrastructure-concepts/work-pools/) are used to easily switch between different types of infrastructure and create a template for deployments to use.
+
+Common work pool types include [Docker](/3.0/deploy/infrastructure-examples/docker), [Kubernetes](/3.0/deploy/infrastructure-examples/kubernetes), and serverless options such as [AWS ECS](integrations/prefect-aws/ecs_guide#ecs-worker-guide), [Azure ACI](/integrations/prefect-azure/aci_worker), and [GCP Cloud Run](/integrations/prefect-gcp/gcp-worker-guide). 
+
+### Work pool-based deployment requirements
+
+Deployments created through the Python SDK that use a work pool require a `name` argument and a `work_pool` argument. 
+They also require reference to your flow code storage location.
+
+Your flow code location can be specified in a few ways:
+
+1. Bake it into your Docker image (for work-pools that use Docker images). 
+    As shown in the example above,Prefect facilitates this as the default method for deployments created with the Python SDK. 
+    This method requires that you specify the `image` argument in the `.deploy` method.
+2. Chain the `from_source` method to a flow object or flow function and specify one of the following:
+    1. the git-based cloud provider location (for example, GitHub) 
+    2. the cloud provider storage location (for example, AWS S3)
+    3. the local path
+
+See the [Retrieve code from storage docs](/3.0/deploy/infrastructure-concepts/store-flow-code) for more information.
+
+## Run a deployment
+
+You can set a deployment to run manually, on a [schedule](3.0/automate/add-schedules#schedule-flow-runs), or [in response to an event](/3.0/automate/events/automations-triggers). 
+
+The deployment inherits the infrastructure configuration from the work pool, and can be overrun at deployment creation time or runtime. 
+
+### Work pools that require a worker
+
+To kick off a scheduled deployment run, if your work pool is a hybrid type, you must start a [`prefect worker`](/3.0/deploy/infrastructure-concepts/workers/). 
+
+A [Prefect worker](/3.0/deploy/infrastructure-concepts/workers) is a client-side process that checks for scheduled flow runs in the work pool.
+When a scheduled run is found, the worker kicks off a flow run on the specified infrastructure and monitors the flow run until it completes.
+
+### Work pools that don't require a worker
+
+Prefect Cloud offers [push work pools](/3.0/deploy/infrastructure-examples/serverless#automatically-create-a-new-push-work-pool-and-provision-infrastructure) that run flows on Cloud provider serverless infrastructure without a worker and that can be set up quickly. 
+
+Prefect Cloud also provides the option to run work flows on Prefect's infrastructure through a [Prefect Managed work pool](/3.0/deploy/infrastructure-examples/managed).
+
+These work pool types do not require a worker to run flows. 
+However, they do require sharing a bit more information with Prefect, which can be a challenge depending upon the security posture of your organization.
+
+## Static vs. dynamic infrastructure
+
+You can deploy your flows on long-lived static infrastructure or on dynamic infrastructure that is able to scale horizontally.
+The best choice depends on your use case.
+
+### Static infrastructure
+
+When you have several flows running regularly, [the `serve` method](/3.0/develop/write-flows/#serving-a-flow)
+of the `Flow` object or [the `serve` utility](/3.0/develop/write-flows/#serving-multiple-flows-at-once)
+is a great option for managing multiple flows simultaneously.
+
+Once you have authored your flow and decided on its deployment settings, run this long-running
+process in a location of your choosing.
+The process stays in communication with the Prefect API, monitoring for work and submitting each run
+within an individual subprocess.
+Because runs are submitted to subprocesses, any external infrastructure configuration
+must be set up beforehand and kept associated with this process.
+
+This approach has these benefits:
+
+- Users are in complete control of their infrastructure, and anywhere the "serve" Python process can
+run is a suitable deployment environment.
+- It is simple to reason about.
+- Creating deployments requires a minimal set of decisions.
+- Iteration speed is fast.
+
+### Dynamic infrastructure
+
+Consider running flows on dynamically provisioned infrastructure with work pools when you have any of the following:
+
+- Flows that require expensive infrastructure due to the long-running process.
+- Flows with heterogeneous infrastructure needs across runs.
+- Large volumes of deployments.
+- An internal organizational structure in which deployment authors or runners are not members of
+the team that manages the infrastructure.
+
+[Work pools](/3.0/deploy/infrastructure-concepts/work-pools/) allow Prefect to exercise greater control
+of the infrastructure on which flows run.
+Options for [serverless work pools](/3.0/deploy/infrastructure-examples/serverless/) allow you to
+scale to zero when workflows aren't running.
+Prefect even provides you with the ability to
+[provision cloud infrastructure via a single CLI command](/3.0/deploy/infrastructure-examples/serverless/#automatically-create-a-new-push-work-pool-and-provision-infrastructure),
+if you use a Prefect Cloud push work pool option.
+
+With work pools:
+
+- You can configure and monitor infrastructure configuration within the Prefect UI.
+- Infrastructure is ephemeral and dynamically provisioned.
+- Prefect is more infrastructure-aware and collects more event data from your infrastructure by default.
+- Highly decoupled setups are possible.
+
+<Note>
+**You don't have to commit to one approach**
+
+You can mix and match approaches based on the needs of each flow. You can also change the
+deployment approach for a particular flow as its needs evolve.
+For example, you might use workers for your expensive machine learning pipelines,
+but use the serve mechanics for smaller, more frequent file-processing pipelines.
+</Note>
+
+## Deployment schema
 
 {/* pmd-metadata: notest */}
 ```python
@@ -61,7 +226,6 @@ class Deployment:
 ```
 
 All methods for creating Prefect deployments are interfaces for populating this schema.
-The following sections explain each component in more detail.
 
 ### Required defining data
 
@@ -71,17 +235,18 @@ The deployment name is not required to be unique across all deployments, but is 
 for a given flow ID. This means you will often see references to the deployment's unique identifying name
 `{FLOW_NAME}/{DEPLOYMENT_NAME}`.
 
-For example, you can trigger a run of a deployment from the Prefect CLI:
+For example, to trigger a deployment run from the Prefect CLI:
 
 ```bash
 prefect deployment run my-first-flow/my-first-deployment
 ```
 
-or with the SDK using [`run_deployment`](https://prefect-python-sdk-docs.netlify.app/prefect/deployments/flow_runs/#prefect.deployments.flow_runs.run_deployment):
+or from the Python SDK with [`run_deployment`](https://prefect-python-sdk-docs.netlify.app/prefect/deployments/flow_runs/#prefect.deployments.flow_runs.run_deployment):
 
 {/* pmd-metadata: notest */}
 ```python
 from prefect.deployments import run_deployment
+
 
 run_deployment(
     name="my-first-flow/my-first-deployment",
@@ -114,9 +279,9 @@ but Prefect cannot trigger them.
 
 Deployment metadata references code that exists in potentially diverse locations within your environment.
 This separation means that your flow code stays within your storage and execution
-infrastructure, and never lives on the Prefect server or database.
+infrastructure.
 
-This is key to the Prefect hybrid model: there's a boundary between your proprietary assets,
+This is key to the Prefect hybrid model used with hybrid work pool types: there's a boundary between your proprietary assets,
 such as your flow code, and the Prefect backend (including [Prefect Cloud](/3.0/manage/cloud/)).
 </Note>
 
@@ -191,63 +356,3 @@ configuration, and prepares the runtime environment for workflow execution.
 Pull steps allow users to highly decouple their workflow architecture.
 For example, a common use of pull steps is to dynamically pull code from remote filesystems such as
 GitHub with each run of their deployment.
-
-## Static vs. dynamic infrastructure
-
-You can deploy your flows on long-lived static infrastructure or on dynamic infrastructure that is able to scale horizontally.
-The right choice depends on your use case.
-
-### Static infrastructure
-
-When you have several flows running regularly, [the `serve` method](/3.0/develop/write-flows/#serving-a-flow)
-of the `Flow` object or [the `serve` utility](/3.0/develop/write-flows/#serving-multiple-flows-at-once)
-is a great option for managing multiple flows simultaneously.
-
-Once you have authored your flow and decided on its deployment settings, run this long-running
-process in a location of your choosing.
-The process stays in communication with the Prefect API, monitoring for work and submitting each run
-within an individual subprocess.
-Because runs are submitted to subprocesses, any external infrastructure configuration
-must be set up beforehand and kept associated with this process.
-
-This approach has these benefits:
-
-- Users are in complete control of their infrastructure, and anywhere the "serve" Python process can
-run is a suitable deployment environment.
-- It is simple to reason about.
-- Creating deployments requires a minimal set of decisions.
-- Iteration speed is fast.
-
-### Dynamic infrastructure
-
-Consider running flows on dynamically provisioned infrastructure with work pools when you have any of the following:
-
-- Flows that require expensive infrastructure due to the long-running process.
-- Flows with heterogeneous infrastructure needs across runs.
-- Large volumes of deployments.
-- An internal organizational structure in which deployment authors or runners are not members of
-the team that manages the infrastructure.
-
-[Work pools](/3.0/deploy/infrastructure-concepts/work-pools/) allow Prefect to exercise greater control
-of the infrastructure on which flows run.
-Options for [serverless work pools](/3.0/deploy/infrastructure-examples/serverless/) allow you to
-scale to zero when workflows aren't running.
-Prefect even provides you with the ability to
-[provision cloud infrastructure via a single CLI command](/3.0/deploy/infrastructure-examples/serverless/#automatically-create-a-new-push-work-pool-and-provision-infrastructure),
-if you use a Prefect Cloud push work pool option.
-
-With work pools:
-
-- You can configure and monitor infrastructure configuration within the Prefect UI.
-- Infrastructure is ephemeral and dynamically provisioned.
-- Prefect is more infrastructure-aware and collects more event data from your infrastructure by default.
-- Highly decoupled setups are possible.
-
-<Note>
-**You don't have to commit to one approach**
-
-You can mix and match approaches based on the needs of each flow. You can also change the
-deployment approach for a particular flow as its needs evolve.
-For example, you might use workers for your expensive machine learning pipelines,
-but use the serve mechanics for smaller, more frequent file-processing pipelines.
-</Note>
