--- a/docs/3.0/deploy/index.mdx
+++ b/docs/3.0/deploy/index.mdx
@@ -14,15 +14,15 @@ Attributes of a deployment include:
 - **Schedule** or **Trigger**: optional schedule or triggering rules for this deployment
 - **Tags**: optional text labels for organizing deployments
 
-Some of the most common reasons to use an orchestration tool like Prefect are for
+Some of the most common reasons to use an orchestration tool such as Prefect are for
 [scheduling](/3.0/automate/add-schedules/) and [event-based triggering](/3.0/automate/events/automations-triggers/).
-As opposed to manually triggering and managing flow runs, deploying a flow exposes an API and
+In addition to manually triggering and managing flow runs, deploying a flow exposes an API and
 UI that allow you to:
 
 - trigger new runs, [cancel active runs](/3.0/develop/write-flows/#cancel-a-flow-run),
 pause scheduled runs, customize parameters, and more
-- remotely configure schedules and automation rules for your deployments
-- dynamically provision infrastructure using [workers](/3.0/deploy/infrastructure-examples/docker)
+- remotely configure [schedules](/3.0/automate/add-schedules) and [automation rules](/3.0/automate/events/automations-triggers) for deployments
+- dynamically provision infrastructure with [work pools](/3.0/deploy/infrastructure-concepts/work-pools)
 
 ## Create a deployment 
 
@@ -46,15 +46,16 @@ if __name__ == "__main__":
 
 This methods creates a deployment object that can be used to trigger flow runs.
 It starts a server and registers the flow with the Prefect API.
-The server process runs in a single process and waits for flow runs to be triggered.
+The process runs locally and waits to pick up triggered flow runs on the server
 
-If you want to run your flow on remote infrastructure, need more control over the execution environment, or want to create a template for other deployments to use, use a deployment with a work pool.
+If you want to run your flow on remote infrastructure, need more control over the execution environment, or want to create a template for other deployments, use a deployment with a work pool.
 
-### Create a work pool-based Deployment
+### Create a work pool-based deployment
+
+Prefect offers two primary options for creating deployments that use a work pool: a Python method and a YAML file.
 
 ### Create a deployment with a Python `flow.deploy` method
 
-Prefect offers two primary methods for creating deployments that use a work pool.
 To define a deployment through Python code, use the `flow.deploy` method.
 
 Here's an example of a deployment that uses a work pool and bakes the code into a Docker image.
@@ -77,6 +78,7 @@ my_flow.deploy(
 ```
 
 ### Create a deployment with a YAML file
+
 If you'd rather take a declarative approach to defining a deployment through a YAML file, use a [prefect.yaml file](/3.0/deploy/infrastructure-concepts/prefect-yaml).
 
 Prefect provides an interactive CLI that walks you through creating a `prefect.yaml` file.
@@ -85,10 +87,11 @@ Prefect provides an interactive CLI that walks you through creating a `prefect.y
 prefect deploy
 ```
 
-Prefect also provides [CI/CD options](/3.0/deploy/infrastructure-concepts/deploy-ci-cd) for automatically creating deployments. 
+Prefect also provides [CI/CD options](/3.0/deploy/infrastructure-concepts/deploy-ci-cd) for automatically creating YAML-baseddeployments. 
 
 ### Work pools
-[Work pools](/3.0/deploy/infrastructure-concepts/work-pools/) are used to easily switch between different types of infrastructure and create a template for deployments to use.
+
+[Work pools](/3.0/deploy/infrastructure-concepts/work-pools/) allow you to switch between different types of infrastructure and to create a template for deployments.
 
 Common work pool types include [Docker](/3.0/deploy/infrastructure-examples/docker), [Kubernetes](/3.0/deploy/infrastructure-examples/kubernetes), and serverless options such as [AWS ECS](integrations/prefect-aws/ecs_guide#ecs-worker-guide), [Azure ACI](/integrations/prefect-azure/aci_worker), and [GCP Cloud Run](/integrations/prefect-gcp/gcp-worker-guide). 
 
@@ -113,11 +116,11 @@ See the [Retrieve code from storage docs](/3.0/deploy/infrastructure-concepts/st
 
 You can set a deployment to run manually, on a [schedule](3.0/automate/add-schedules#schedule-flow-runs), or [in response to an event](/3.0/automate/events/automations-triggers). 
 
-The deployment inherits the infrastructure configuration from the work pool, and can be overrun at deployment creation time or runtime. 
+The deployment inherits the infrastructure configuration from the work pool, and can be overridden at deployment creation time or at runtime. 
 
 ### Work pools that require a worker
 
-To kick off a scheduled deployment run, if your work pool is a hybrid type, you must start a [`prefect worker`](/3.0/deploy/infrastructure-concepts/workers/). 
+To kick off a scheduled deployment run, if your work pool is a hybrid type, you must start a [worker](/3.0/deploy/infrastructure-concepts/workers/). 
 
 A [Prefect worker](/3.0/deploy/infrastructure-concepts/workers) is a client-side process that checks for scheduled flow runs in the work pool.
 When a scheduled run is found, the worker kicks off a flow run on the specified infrastructure and monitors the flow run until it completes.
