--- a/docs/3.0/deploy/index.mdx
+++ b/docs/3.0/deploy/index.mdx
@@ -26,10 +26,9 @@ pause scheduled runs, customize parameters, and more
 
 ## Create a deployment 
 
-### Create a deployment with a local `serve` method
+### Create a deployment in Python with a local `serve` method
 
-A deployment can be defined in Python with the `.serve` method. 
-This is a great way to get started and to learn about deployments.
+This is a great way to get started with deployments.
 
 ```python
 from prefect import flow
@@ -46,7 +45,7 @@ if __name__ == "__main__":
 
 This methods creates a deployment object that can be used to trigger flow runs.
 It starts a server and registers the flow with the Prefect API.
-The process runs locally and waits to pick up triggered flow runs on the server
+The process runs locally and waits to pick up scheduled flow runs from the server.
 
 If you want to run your flow on remote infrastructure, need more control over the execution environment, or want to create a template for other deployments, use a deployment with a work pool.
 
@@ -68,13 +67,13 @@ from prefect import flow
 def my_flow():
     print("Hello, Prefect!")
 
-
-my_flow.deploy(
-    name="my-second-deployment",
-    work_pool_name="my-work-pool",
-    image="my-image",
-    push=False,
-)
+if __name__ == "__main__":
+    my_flow.deploy(
+        name="my-second-deployment",
+        work_pool_name="my-work-pool",
+        image="my-image",
+        push=False,
+    )
 ```
 
 ### Create a deployment with a YAML file
@@ -87,7 +86,7 @@ Prefect provides an interactive CLI that walks you through creating a `prefect.y
 prefect deploy
 ```
 
-Prefect also provides [CI/CD options](/3.0/deploy/infrastructure-concepts/deploy-ci-cd) for automatically creating YAML-baseddeployments. 
+Prefect also provides [CI/CD options](/3.0/deploy/infrastructure-concepts/deploy-ci-cd) for automatically creating YAML-based deployments. 
 
 ### Work pools
 
@@ -108,7 +107,7 @@ Your flow code location can be specified in a few ways:
 2. Chain the `from_source` method to a flow object or flow function and specify one of the following:
     1. the git-based cloud provider location (for example, GitHub) 
     2. the cloud provider storage location (for example, AWS S3)
-    3. the local path
+    3. the local path (an option for Process work pools)
 
 See the [Retrieve code from storage docs](/3.0/deploy/infrastructure-concepts/store-flow-code) for more information.
 
@@ -120,10 +119,10 @@ The deployment inherits the infrastructure configuration from the work pool, and
 
 ### Work pools that require a worker
 
-To kick off a scheduled deployment run, if your work pool is a hybrid type, you must start a [worker](/3.0/deploy/infrastructure-concepts/workers/). 
+To run a deployment with a hybrid work pool type, such as Docker or Kubernetes, you must start a [worker](/3.0/deploy/infrastructure-concepts/workers/).
 
-A [Prefect worker](/3.0/deploy/infrastructure-concepts/workers) is a client-side process that checks for scheduled flow runs in the work pool.
-When a scheduled run is found, the worker kicks off a flow run on the specified infrastructure and monitors the flow run until it completes.
+A [Prefect worker](/3.0/deploy/infrastructure-concepts/workers) is a client-side process that checks for scheduled flow runs in the work pool that it matches.
+When a scheduled run is found, the worker kicks off a flow run on the specified infrastructure and monitors the flow run until completion.
 
 ### Work pools that don't require a worker
 
