--- a/docs/3.0/deploy/index.mdx
+++ b/docs/3.0/deploy/index.mdx
@@ -90,7 +90,8 @@ Prefect also provides [CI/CD options](/3.0/deploy/infrastructure-concepts/deploy
 
 ### Work pools
 
-[Work pools](/3.0/deploy/infrastructure-concepts/work-pools/) allow you to switch between different types of infrastructure and to create a template for deployments.
+[Work pools](/3.0/deploy/infrastructure-concepts/work-pools/) allow you to switch between different types of infrastructure and to create a template for deployments. 
+Data platform teams find work pools especially useful for managing infrastructure configuration across teams.
 
 Common work pool types include [Docker](/3.0/deploy/infrastructure-examples/docker), [Kubernetes](/3.0/deploy/infrastructure-examples/kubernetes), and serverless options such as [AWS ECS](integrations/prefect-aws/ecs_guide#ecs-worker-guide), [Azure ACI](/integrations/prefect-azure/aci_worker), and [GCP Cloud Run](/integrations/prefect-gcp/gcp-worker-guide). 
 
