--- a/docs/3.0/deploy/index.mdx
+++ b/docs/3.0/deploy/index.mdx
@@ -28,7 +28,7 @@ pause scheduled runs, customize parameters, and more
 
 ### Create a deployment in Python with a local `serve` method
 
-This is a great way to get started with deployments.
+This is the simplest way to get started with deployments:
 
 ```python
 from prefect import flow
